[tool.poetry]
name = "TIMECRAFTPRO"
version = "0.1.0"
description = "time series data"
authors = ["Muhammad Umer <umerdiwan3@gmail.com>"]
repository = "https://github.com/umerfarooq771/timecraft"
packages = [{include = "TIMECRAFTPRO"}]

[tool.poetry.dependencies]
pandas = "^1.5.3"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
readme = "README.md"
